--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ Error message and password prompt
 {"created":"20220704130337457","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/Shadows","modified":"20220711215033762"},
 {"created":"20220704124926026","title":"$:/state/tab/sidebar--595412856","text":"Directory","modified":"20220704224743057"},
 {"created":"20220704154552440","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditorToolbar","modified":"20220705090359348"},
-{"created":"20220711021844756","title":"$:/state/toc/Directory-Anime/Manga-823346622","text":"open","modified":"20220711021844756"},
+{"created":"20220711021844756","title":"$:/state/toc/Directory-Anime/Manga-823346622","text":"close","modified":"20220712111943936"},
 {"created":"20220710161622051","title":"$:/state/toc/Directory-Blogs-823346622","text":"open","modified":"20220710161648753"},
 {"created":"20220704201049837","title":"$:/state/toc/Directory-Computers, Technology, and the Internet-549457017","text":"open","modified":"20220704201049837"},
 {"created":"20220709122600503","title":"$:/state/toc/Directory-Food-823346622","text":"close","modified":"20220712110257505"},
@@ -566,15 +566,15 @@ Error message and password prompt
 {"created":"20220706112924896","title":"$:/state/toc/Directory-Linguistics-823346622","text":"close","modified":"20220706112927631"},
 {"created":"20220704182030154","title":"$:/state/toc/Directory-Music-327654999","text":"open","modified":"20220704182030154"},
 {"created":"20220704153628621","title":"$:/state/toc/Directory-Music-549457017","text":"open","modified":"20220704153628621"},
-{"created":"20220705090644707","title":"$:/state/toc/Directory-Music-823346622","text":"open","modified":"20220712110258821"},
+{"created":"20220705090644707","title":"$:/state/toc/Directory-Music-823346622","text":"close","modified":"20220712111944533"},
 {"created":"20220704182052546","title":"$:/state/toc/Directory-People-327654999","text":"open","modified":"20220704182052546"},
 {"created":"20220704140205265","title":"$:/state/toc/Directory-People-549457017","text":"open","modified":"20220704140256027"},
-{"created":"20220705090142750","title":"$:/state/toc/Directory-People-823346622","text":"open","modified":"20220711121500854"},
+{"created":"20220705090142750","title":"$:/state/toc/Directory-People-823346622","text":"close","modified":"20220712111945097"},
 {"created":"20220705090418619","title":"$:/state/toc/Directory-Tech/Online-823346622","text":"open","modified":"20220711021816016"},
 {"created":"20220704182053690","title":"$:/state/toc/Directory-Video Games-327654999","text":"open","modified":"20220704182053690"},
 {"created":"20220704131922454","title":"$:/state/toc/Directory-Video Games-549457017","text":"open","modified":"20220704140256982"},
 {"created":"20220704135504890","title":"$:/state/toc/Directory-Video Games-671506634","text":"close","modified":"20220710161434888"},
-{"created":"20220705090149671","title":"$:/state/toc/Directory-Video Games-823346622","text":"open","modified":"20220711023208052"},
+{"created":"20220705090149671","title":"$:/state/toc/Directory-Video Games-823346622","text":"close","modified":"20220712111943433"},
 {"created":"20220711121456987","title":"$:/state/toc/Directory/Food-Food - Recipes-823346622","text":"close","modified":"20220711121457798"},
 {"created":"20220711081655123","title":"$:/state/toc/Directory/People-Alex (PAUSE BREAK)-823346622","text":"open","modified":"20220711121501296"},
 {"created":"20220711081614037","title":"$:/state/toc/Directory/Video Games-Video Games - Informal-823346622","text":"open","modified":"20220711121617115"},
